# re_svg

./: .metadata  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/re_svg_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
ios/: re_svg.podspec
ios/Classes/: ReSvgPlugin.swift  re_svg.c
lib/: re_svg.dart  re_svg_bindings_generated.dart  resvg_bindings_generated.dart  resvg_ffi.dart
macos/: re_svg.podspec
macos/Classes/: ReSvgPlugin.swift
src/: CMakeLists.txt  re_svg.c
